// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features can be parsed and aliased: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Feature",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "person",
          "filters": [],
          "imports": [],
          "isNonunique": false,
          "isOrdered": false,
          "isSufficient": false,
          "members": [],
          "multiplicity": {
            "$type": "OwningMembership",
            "annotations": [],
            "chains": [],
            "element": {
              "$type": "MultiplicityRange",
              "aliases": [],
              "annotatingMembers": [],
              "filters": [],
              "imports": [],
              "isNonunique": false,
              "isOrdered": false,
              "isSufficient": false,
              "members": [],
              "namespaceMembers": [],
              "prefixes": [],
              "range": {
                "$type": "OwningMembership",
                "annotations": [],
                "chains": [],
                "element": {
                  "$type": "LiteralInfinity",
                  "aliases": [],
                  "annotatingMembers": [],
                  "filters": [],
                  "imports": [],
                  "isNonunique": false,
                  "isOrdered": false,
                  "isSufficient": false,
                  "members": [],
                  "namespaceMembers": [],
                  "prefixes": [],
                  "relationshipMembers": [],
                  "typeRelationships": [],
                },
                "elements": [],
                "prefixes": [],
              },
              "relationshipMembers": [],
              "typeRelationships": [],
            },
            "elements": [],
            "prefixes": [],
          },
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [
            {
              "$type": "FeatureTyping",
              "annotations": [],
              "chains": [],
              "elements": [],
              "prefixes": [],
              "reference": {
                "$type": "TypeReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Classifier",
                      "aliases": [
                        {
                          "$type": "Membership",
                          "annotations": [],
                          "chains": [],
                          "declaredName": "personAlias",
                          "elements": [],
                          "prefixes": [],
                          "reference": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": [Circular],
                              },
                            ],
                          },
                        },
                      ],
                      "annotatingMembers": [],
                      "declaredName": "Person",
                      "filters": [],
                      "imports": [],
                      "isSufficient": false,
                      "members": [
                        {
                          "$type": "FeatureMembership",
                          "annotations": [],
                          "chains": [],
                          "element": {
                            "$type": "Feature",
                            "aliases": [],
                            "annotatingMembers": [],
                            "declaredName": "age",
                            "filters": [],
                            "imports": [],
                            "isNonunique": false,
                            "isOrdered": false,
                            "isSufficient": false,
                            "members": [],
                            "multiplicity": {
                              "$type": "OwningMembership",
                              "annotations": [],
                              "chains": [],
                              "element": {
                                "$type": "MultiplicityRange",
                                "aliases": [],
                                "annotatingMembers": [],
                                "filters": [],
                                "imports": [],
                                "isNonunique": false,
                                "isOrdered": false,
                                "isSufficient": false,
                                "members": [],
                                "namespaceMembers": [],
                                "prefixes": [],
                                "range": {
                                  "$type": "OwningMembership",
                                  "annotations": [],
                                  "chains": [],
                                  "element": {
                                    "$type": "LiteralNumber",
                                    "aliases": [],
                                    "annotatingMembers": [],
                                    "filters": [],
                                    "imports": [],
                                    "isNonunique": false,
                                    "isOrdered": false,
                                    "isSufficient": false,
                                    "literal": 1,
                                    "members": [],
                                    "namespaceMembers": [],
                                    "prefixes": [],
                                    "relationshipMembers": [],
                                    "typeRelationships": [],
                                  },
                                  "elements": [],
                                  "prefixes": [],
                                },
                                "relationshipMembers": [],
                                "typeRelationships": [],
                              },
                              "elements": [],
                              "prefixes": [],
                            },
                            "namespaceMembers": [],
                            "prefixes": [],
                            "relationshipMembers": [],
                            "typeRelationships": [
                              {
                                "$type": "FeatureTyping",
                                "annotations": [],
                                "chains": [],
                                "elements": [],
                                "prefixes": [],
                                "reference": {
                                  "$type": "TypeReference",
                                  "parts": [
                                    {
                                      "error": undefined,
                                      "ref": {
                                        "$type": "DataType",
                                        "aliases": [],
                                        "annotatingMembers": [],
                                        "declaredName": "Integer",
                                        "filters": [],
                                        "imports": [],
                                        "isSufficient": false,
                                        "members": [],
                                        "namespaceMembers": [],
                                        "prefixes": [],
                                        "relationshipMembers": [],
                                        "typeRelationships": [],
                                      },
                                    },
                                  ],
                                },
                              },
                            ],
                          },
                          "elements": [],
                          "prefixes": [],
                        },
                      ],
                      "namespaceMembers": [],
                      "prefixes": [],
                      "relationshipMembers": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "DataType",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "Integer",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Classifier",
          "aliases": [
            {
              "$type": "Membership",
              "annotations": [],
              "chains": [],
              "declaredName": "personAlias",
              "elements": [],
              "prefixes": [],
              "reference": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Feature",
                      "aliases": [],
                      "annotatingMembers": [],
                      "declaredName": "person",
                      "filters": [],
                      "imports": [],
                      "isNonunique": false,
                      "isOrdered": false,
                      "isSufficient": false,
                      "members": [],
                      "multiplicity": {
                        "$type": "OwningMembership",
                        "annotations": [],
                        "chains": [],
                        "element": {
                          "$type": "MultiplicityRange",
                          "aliases": [],
                          "annotatingMembers": [],
                          "filters": [],
                          "imports": [],
                          "isNonunique": false,
                          "isOrdered": false,
                          "isSufficient": false,
                          "members": [],
                          "namespaceMembers": [],
                          "prefixes": [],
                          "range": {
                            "$type": "OwningMembership",
                            "annotations": [],
                            "chains": [],
                            "element": {
                              "$type": "LiteralInfinity",
                              "aliases": [],
                              "annotatingMembers": [],
                              "filters": [],
                              "imports": [],
                              "isNonunique": false,
                              "isOrdered": false,
                              "isSufficient": false,
                              "members": [],
                              "namespaceMembers": [],
                              "prefixes": [],
                              "relationshipMembers": [],
                              "typeRelationships": [],
                            },
                            "elements": [],
                            "prefixes": [],
                          },
                          "relationshipMembers": [],
                          "typeRelationships": [],
                        },
                        "elements": [],
                        "prefixes": [],
                      },
                      "namespaceMembers": [],
                      "prefixes": [],
                      "relationshipMembers": [],
                      "typeRelationships": [
                        {
                          "$type": "FeatureTyping",
                          "annotations": [],
                          "chains": [],
                          "elements": [],
                          "prefixes": [],
                          "reference": {
                            "$type": "TypeReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": [Circular],
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "annotatingMembers": [],
          "declaredName": "Person",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [
            {
              "$type": "FeatureMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Feature",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "age",
                "filters": [],
                "imports": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "members": [],
                "multiplicity": {
                  "$type": "OwningMembership",
                  "annotations": [],
                  "chains": [],
                  "element": {
                    "$type": "MultiplicityRange",
                    "aliases": [],
                    "annotatingMembers": [],
                    "filters": [],
                    "imports": [],
                    "isNonunique": false,
                    "isOrdered": false,
                    "isSufficient": false,
                    "members": [],
                    "namespaceMembers": [],
                    "prefixes": [],
                    "range": {
                      "$type": "OwningMembership",
                      "annotations": [],
                      "chains": [],
                      "element": {
                        "$type": "LiteralNumber",
                        "aliases": [],
                        "annotatingMembers": [],
                        "filters": [],
                        "imports": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "literal": 1,
                        "members": [],
                        "namespaceMembers": [],
                        "prefixes": [],
                        "relationshipMembers": [],
                        "typeRelationships": [],
                      },
                      "elements": [],
                      "prefixes": [],
                    },
                    "relationshipMembers": [],
                    "typeRelationships": [],
                  },
                  "elements": [],
                  "prefixes": [],
                },
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [
                  {
                    "$type": "FeatureTyping",
                    "annotations": [],
                    "chains": [],
                    "elements": [],
                    "prefixes": [],
                    "reference": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "DataType",
                            "aliases": [],
                            "annotatingMembers": [],
                            "declaredName": "Integer",
                            "filters": [],
                            "imports": [],
                            "isSufficient": false,
                            "members": [],
                            "namespaceMembers": [],
                            "prefixes": [],
                            "relationshipMembers": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`member features can be parsed: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Classifier",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "A",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Classifier",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "B",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [
            {
              "$type": "FeatureMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Feature",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "f",
                "filters": [],
                "imports": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [],
              },
              "elements": [],
              "prefixes": [],
            },
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Feature",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "g",
                "filters": [],
                "imports": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [
                  {
                    "$type": "TypeFeaturing",
                    "annotations": [],
                    "chains": [],
                    "elements": [],
                    "prefixes": [],
                    "reference": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Classifier",
                            "aliases": [],
                            "annotatingMembers": [],
                            "declaredName": "A",
                            "filters": [],
                            "imports": [],
                            "isSufficient": false,
                            "members": [],
                            "namespaceMembers": [],
                            "prefixes": [],
                            "relationshipMembers": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;
